[fix bug 1662064] Better padding sync around scrollable tables, and no more squished Columns in FF when x-scrolling. PLUS: Added zoom on thead container for IE resizeable Columns to display labels; backward compat for Column.width needing to be number instead of allowing strings; alias to YAHOO.env.ua; cloneObject improvements, including support for passing in an undefined value, and return non-object and non-array values as-is; backward compat for asc -> DT.CLASS_ASC and desc -> DT.CLASS_DESC; reverting to the more heavy-handed syncColWidths due to issues with wide tables in narrow windows; hide the misplaced IE tbody focus outline; fix IE error in _addTrEl calculation of beforeRow; increment _nTdCount; validate instance before running Chain methods.

--- a/widget/datatable/src/css/datatable-core.css
+++ b/widget/datatable/src/css/datatable-core.css
@@ -19,6 +19,9 @@
 }
 
 /* resizeable columns */
+.yui-dt-hd {
+    zoom:1; 
+}
 th.yui-dt-resizeable .yui-dt-liner {
     position:relative;
 }
